crates/metaxy-cli/tests/snapshots/solid__snapshot_solid_queries_only.snap
---
source: crates/metaxy-cli/tests/solid.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

import { createSignal, createEffect, createMemo, onCleanup, batch, untrack } from "solid-js";

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type QueryKey = keyof Procedures["queries"];
type QueryInput<K extends QueryKey> = Procedures["queries"][K]["input"];
type QueryOutput<K extends QueryKey> = Procedures["queries"][K]["output"];

type VoidQueryKey = "version";
type NonVoidQueryKey = "get_user";

export interface QueryOptions<K extends QueryKey> {
  /**
   * Whether to execute the query. @default true
   *
   * Pass a getter `() => bool` for reactive updates — a plain `boolean` is
   * read once when `createQuery` is called and will not trigger re-fetches.
   */
  enabled?: boolean | (() => boolean);

  /** Auto-refetch interval in milliseconds. Set to 0 or omit to disable. */
  refetchInterval?: number;

  /** Initial data shown before the first fetch completes. */
  placeholderData?: QueryOutput<K>;

  /** Per-call options forwarded to client.query(). */
  callOptions?: CallOptions;

  /** Called when the query succeeds. */
  onSuccess?: (data: QueryOutput<K>) => void;

  /** Called when the query fails. */
  onError?: (error: RpcError) => void;

  /** Called when the query settles (success or failure). */
  onSettled?: () => void;
}

export interface QueryResult<K extends QueryKey> {
  /** The latest successfully resolved data, or placeholderData. */
  data: () => QueryOutput<K> | undefined;

  /** The error from the most recent failed fetch, cleared on next attempt. */
  error: () => RpcError | undefined;

  /** True while a fetch is in-flight (including the initial fetch). */
  isLoading: () => boolean;

  /** True after the first successful fetch. Stays true even if a later refetch fails. */
  isSuccess: () => boolean;

  /** True when the most recent fetch failed. */
  isError: () => boolean;

  /** Manually trigger a refetch. Works even when `enabled` is false. Resets the polling interval. */
  refetch: () => Promise<void>;
}

const VOID_QUERY_KEYS: Set<QueryKey> = new Set(["version"]);

export function createQuery<K extends "version">(client: RpcClient, key: K, options?: QueryOptions<K> | (() => QueryOptions<K>)): QueryResult<K>;
export function createQuery<K extends "get_user">(client: RpcClient, key: K, input: () => QueryInput<K>, options?: QueryOptions<K> | (() => QueryOptions<K>)): QueryResult<K>;
export function createQuery<K extends QueryKey>(
  client: RpcClient,
  ...args: unknown[]
): QueryResult<K> {
  const key = args[0] as K;

  let inputFn: (() => QueryInput<K>) | undefined;
  let optionsArg: QueryOptions<K> | (() => QueryOptions<K>) | undefined;

  if (typeof args[1] === "function" && args[2] !== undefined) {
    inputFn = args[1] as () => QueryInput<K>;
    optionsArg = args[2] as QueryOptions<K> | (() => QueryOptions<K>) | undefined;
  } else if (typeof args[1] === "function") {
    if (VOID_QUERY_KEYS.has(key)) {
      optionsArg = args[1] as () => QueryOptions<K>;
    } else {
      inputFn = args[1] as () => QueryInput<K>;
    }
  } else if (typeof args[1] === "object") {
    optionsArg = args[1] as QueryOptions<K>;
  }

  function resolveOptions(): QueryOptions<K> | undefined {
    return typeof optionsArg === "function" ? optionsArg() : optionsArg;
  }

  function resolveEnabled(): boolean {
    const opts = resolveOptions();
    return typeof opts?.enabled === "function"
      ? opts.enabled()
      : (opts?.enabled ?? true);
  }

  const initialOpts = resolveOptions();
  const initialEnabled = typeof initialOpts?.enabled === "function"
    ? initialOpts.enabled()
    : (initialOpts?.enabled ?? true);

  const [data, setData] = createSignal<QueryOutput<K> | undefined>(initialOpts?.placeholderData);
  const [error, setError] = createSignal<RpcError | undefined>();
  const [isLoading, setIsLoading] = createSignal(initialEnabled);
  const [hasFetched, setHasFetched] = createSignal(false);

  const resolvedEnabled = createMemo(() => resolveEnabled());
  const isSuccess = createMemo(() => hasFetched());
  const isError = createMemo(() => error() !== undefined);

  let generation = 0;
  let controller: AbortController | undefined;
  let intervalId: ReturnType<typeof setInterval> | undefined;

  async function fetchData(input: QueryInput<K> | undefined, signal: AbortSignal, gen: number) {
    const opts = resolveOptions();
    setIsLoading(true);
    setError(undefined);
    try {
      const callArgs: unknown[] = [key];
      if (input !== undefined) callArgs.push(input);
      const mergedCallOptions = { ...opts?.callOptions, signal: opts?.callOptions?.signal
          ? AbortSignal.any([signal, opts.callOptions.signal])
          : signal };
      callArgs.push(mergedCallOptions);
      const result = await (client.query as (...a: unknown[]) => Promise<unknown>)(
        ...callArgs
      ) as QueryOutput<K>;
      if (gen !== generation) return;
      setData(result as Exclude<QueryOutput<K> | undefined, Function>);
      setHasFetched(true);
      opts?.onSuccess?.(result);
    } catch (e) {
      if (gen !== generation) return;
      const err = e as RpcError;
      setError(err as Exclude<RpcError | undefined, Function>);
      opts?.onError?.(err);
    } finally {
      if (gen === generation) {
        setIsLoading(false);
        opts?.onSettled?.();
      }
    }
  }

  function setupInterval(enabled: boolean, refetchInterval: number | undefined) {
    if (intervalId) { clearInterval(intervalId); intervalId = undefined; }
    if (enabled && refetchInterval) {
      intervalId = setInterval(() => {
        if (controller && !controller.signal.aborted) {
          void fetchData(inputFn?.(), controller.signal, generation);
        }
      }, refetchInterval);
    }
  }

  createEffect(() => {
    const enabled = resolvedEnabled();
    const input = inputFn?.();

    if (controller) controller.abort();
    if (enabled) {
      generation++;
      const gen = generation;
      controller = new AbortController();
      untrack(() => { void fetchData(input, controller.signal, gen); });
    } else {
      setIsLoading(false);
      controller = undefined;
    }

    onCleanup(() => {
      if (controller) { controller.abort(); controller = undefined; }
    });
  });

  createEffect(() => {
    const enabled = resolveEnabled();
    const refetchInterval = resolveOptions()?.refetchInterval;

    setupInterval(enabled, refetchInterval);

    onCleanup(() => {
      if (intervalId) { clearInterval(intervalId); intervalId = undefined; }
    });
  });

  return {
    data: data as () => QueryOutput<K> | undefined,
    error,
    isLoading,
    isSuccess,
    isError,
    refetch: async () => {
      generation++;
      const gen = generation;
      const localController = new AbortController();
      if (controller) controller.abort();
      controller = localController;
      const enabled = resolveEnabled();
      setupInterval(enabled, resolveOptions()?.refetchInterval);
      await fetchData(inputFn?.(), localController.signal, gen);
    },
  };
}
