crates/metaxy-cli/tests/snapshots/solid__snapshot_solid_streams_only.snap
---
source: crates/metaxy-cli/tests/solid.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

import { createSignal, createEffect, createMemo, onCleanup, batch, untrack } from "solid-js";

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type StreamKey = keyof Procedures["streams"];
type StreamInput<K extends StreamKey> = Procedures["streams"][K]["input"];
type StreamOutput<K extends StreamKey> = Procedures["streams"][K]["output"];

type VoidStreamKey = "events";
type NonVoidStreamKey = "chat";

export interface StreamOptions<K extends StreamKey> {
  callOptions?: CallOptions;
  onChunk?: (chunk: StreamOutput<K>) => void;
  onDone?: () => void;
  onError?: (error: RpcError) => void;
}

export interface StreamResult<K extends StreamKey> {
  readonly chunks: () => StreamOutput<K>[];
  readonly error: () => RpcError | undefined;
  readonly isStreaming: () => boolean;
  readonly isDone: () => boolean;
  start: () => void;
  stop: () => void;
}

const VOID_STREAM_KEYS: Set<StreamKey> = new Set(["events"]);

export function createStream<K extends "events">(client: RpcClient, key: K, options?: StreamOptions<K>): StreamResult<K>;
export function createStream<K extends "chat">(client: RpcClient, key: K, input: () => StreamInput<K>, options?: StreamOptions<K>): StreamResult<K>;
export function createStream<K extends StreamKey>(
  client: RpcClient,
  ...args: unknown[]
): StreamResult<K> {
  const key = args[0] as K;

  let inputFn: (() => StreamInput<K>) | undefined;
  let options: StreamOptions<K> | undefined;

  if (typeof args[1] === "function") {
    inputFn = args[1] as () => StreamInput<K>;
    options = args[2] as StreamOptions<K> | undefined;
  } else if (typeof args[1] === "object" && args[1] !== null && !VOID_STREAM_KEYS.has(key)) {
    inputFn = () => args[1] as StreamInput<K>;
    options = args[2] as StreamOptions<K> | undefined;
  } else {
    options = args[1] as StreamOptions<K> | undefined;
  }

  const [chunks, setChunks] = createSignal<StreamOutput<K>[]>([]);
  const [error, setError] = createSignal<RpcError | undefined>();
  const [isStreaming, setIsStreaming] = createSignal(false);
  const [isDone, setIsDone] = createSignal(false);
  let controller: AbortController | undefined;

  function stop() {
    if (controller) {
      controller.abort();
      controller = undefined;
    }
  }

  async function run() {
    stop();
    controller = new AbortController();
    batch(() => {
      setChunks([]);
      setError(undefined);
      setIsStreaming(true);
      setIsDone(false);
    });

    try {
      const callArgs: unknown[] = [key];
      const input = inputFn?.();
      if (input !== undefined) callArgs.push(input);
      const mergedCallOptions = { ...options?.callOptions, signal: controller.signal };
      callArgs.push(mergedCallOptions);
      const gen = (client.stream as (...a: unknown[]) => AsyncGenerator<unknown>)(...callArgs);
      for await (const chunk of gen) {
        if (controller.signal.aborted) break;
        setChunks(prev => [...prev, chunk as StreamOutput<K>]);
        options?.onChunk?.(chunk as StreamOutput<K>);
      }
      if (!controller.signal.aborted) {
        setIsDone(true);
        options?.onDone?.();
      }
    } catch (e) {
      if (!controller.signal.aborted) {
        setError(e as RpcError);
        options?.onError?.(e as RpcError);
      }
    } finally {
      setIsStreaming(false);
    }
  }

  onCleanup(stop);

  return { chunks, error, isStreaming, isDone, start: () => { void run(); }, stop };
}
